6.1.1 with fixes for overflow and media loading

--- a/jquery.tippy.css
+++ b/jquery.tippy.css
@@ -79,6 +79,8 @@
 
     border-radius: 0 0 5px 5px;
     position: relative;
+    
+    overflow: auto;
 }
 
 .tippy_body.tippy_noheader {
